--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,12 +6,12 @@
     state: 'latest'
   notify: 'Restart php5-fpm'
 
-- name: Install xdebug
+- name: Install Xdebug
   pear: 
     name: "pecl/xdebug" 
     state: present
 
-- name: Create xdebug.ini
+- name: Create Xdebug.ini
   template:
     src: 'xdebug.ini.j2'
     dest: '/etc/php5/mods-available/xdebug.ini'
