DRUPSIBLE-72 Added flexibility now the user can add or override parameters via inventory var.
Signed-off-by: Mariano Barcia <mariano.barcia@gmail.com>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,7 @@
 ---
 # defaults file for drupsible.xdebug
+
+# Add new (or override existing) params for xdebug.ini freely after the pipe,
+# literal style! http://www.yaml.org/spec/1.2/spec.html#id2795688
+# Intend with 2 spaces, end with a new line.
+drupsible_xdebug_additional_ini_params: |
