DRUPSIBLE-148 Added var to control enabling/disabling Xdebug on CLI. Also renamed the other var.
Signed-off-by: Mariano Barcia <mariano.barcia@gmail.com>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,10 @@
 ---
 # defaults file for drupsible.xdebug
 
+# Composer complains about this, so disabling Xdebug for PHP-CLI
+xdebug_cli_enabled: False
+
 # Add new (or override existing) params for xdebug.ini freely after the pipe,
 # literal style! http://www.yaml.org/spec/1.2/spec.html#id2795688
 # Intend with 2 spaces, end with a new line.
-drupsible_xdebug_additional_ini_params: |
+xdebug_additional_ini_params: |
