--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -31,3 +31,4 @@
     src: "/etc/php5/mods-available/xdebug.ini"
     dest: "/etc/php5/cli/conf.d/20-xdebug.ini"
     state: link
+  when: xdebug_cli_enabled|default(False)|bool
