DRUPSIBLE-217 Added PHP7 support.
Signed-off-by: Mariano Barcia <mariano.barcia@gmail.com>

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 # handlers file for drupsible.xdebug
-- name: Restart php5-fpm
-  service: 
-    name: php5-fpm 
+- name: Restart php-fpm
+  service:
+    name: "php{{ xdebug_php_version }}-fpm"
     state: restarted
