DRUPSIBLE-217 Used flush_handlers at the end of the playbook.
Signed-off-by: Mariano Barcia <mariano.barcia@gmail.com>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -48,3 +48,5 @@
     dest: "{{ xdebug_php_etc_base }}/cli/conf.d/20-xdebug.ini"
     state: link
   when: xdebug_cli_enabled|default(False)|bool
+
+- meta: flush_handlers
