DRUPSIBLE-261 Added provision tags.
Signed-off-by: Mariano Barcia <mariano.barcia@gmail.com>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,11 +5,13 @@
     name: 'php{{ xdebug_php_version }}-dev'
     state: 'latest'
   notify: 'Restart php-fpm'
+  tags: [ provision ]
 
 - name: Install Xdebug
   pear:
     name: "pecl/xdebug"
     state: present
+  tags: [ provision ]
 
 - name: Make sure mods-available directory is present
   file:
