DRUPSIBLE-235 use apt since there is no fact gathering in docker.
Signed-off-by: Mariano Barcia <mariano.barcia@gmail.com>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,6 +4,7 @@
   package:
     name: 'php{{ xdebug_php_version }}-dev'
     state: 'latest'
+    use: apt
   notify: 'Restart php-fpm'
   tags: [ provision ]
 
