--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,7 +10,7 @@
 
 - name: Install Xdebug
   pear:
-    name: "pecl/xdebug"
+    name: "pecl/xdebug{{ xdebug_php_version|version_compare('7.0', '<')|ternary('-2.5.5', '') }}"
     state: present
   tags: [ provision ]
 
